sources/static/css/style.css
/* --------------------------------------------------
 * DESIGN NOTES
 * --------------------------------------------------
 * Use the "Every Layout" system!
 * cf. https://every-layout.dev/
 */

/* --------------------------------------------------
/* TYPEFACE DECLARATIONS
* -------------------------------------------------- */
@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400&family=PT+Sans+Narrow&display=swap');

:root {
    /* --------------------------------------------------
     * MEASURE: Basis for all proportions.
     * -------------------------------------------------- */
    --measure: 72ch;            /* Max character width of a line. */

    /* --------------------------------------------------
     * MODULAR SCALE: Measures for rows and columns.
     *
     * - Rows: baseline + 3 larger and 3 smaller heights should suffice.
     *
     * - Columns: intended to support 1, 2, and 3 column fluid layouts,
     *   for small, medium, wide wide screen layouts respectively. E.g.
     *   prose may occupy 3 narrow columns on a widescreen monitor, but
     *   on a smartphones, it may get a single full-width column.
     * -------------------------------------------------- */

    /* Proportion for modular grid. */
    --ratio: 1.3;

    /* Scale measure map to height and width of square cell */
    --scale-xxxxxs: calc(var(--scale-xxxxs) / var(--ratio));
    --scale-xxxxs: calc(var(--scale-xxxs) / var(--ratio));
    --scale-xxxs: calc(var(--scale-xxs) / var(--ratio));
    --scale-xxs: calc(var(--scale-xs) / var(--ratio));
    --scale-xs: calc(var(--scale-s) / var(--ratio));
    --scale-s: calc(var(--scale-base) / var(--ratio));
    --scale-base: 1rem;         /* Set baseline grid. */
    --scale-l: calc(var(--scale-base) * var(--ratio));
    --scale-xl: calc(var(--scale-l) * var(--ratio));
    --scale-xxl: calc(var(--scale-xl) * var(--ratio));
    --scale-xxxl: calc(var(--scale-xxl) * var(--ratio));
    --scale-xxxl\+s: calc(var(--scale-xxxl) + var(--scale-s));
    --scale-xxxl\+base: calc(var(--scale-xxxl) + var(--scale-base));

    /* Aliases for column widths */
    --col-w-full-bleed: calc(var(--measure) * var(--ratio));
    --col-w-full: var(--measure);
    --col-w-midi: calc(var(--col-w-full) / var(--ratio));
    --col-w-half: calc(var(--col-w-full) / 2);
    --col-w-narrow: calc(var(--col-w-midi) / var(--ratio));
    --col-w-quarter: calc(var(--col-w-full) / 4);
    --col-w-eighth: calc(var(--col-w-full) / 8);

    /* --------------------------------------------------
     * FONTS: Standard fonts, faces, and sane fallbacks.
     * -------------------------------------------------- */
    /* Typesetting defaults.
     *
     * We really like to pair a narrow, tall sans-serif with a gentle serif.
     * Oswald (tall sans-serif) for titles and headings pairs pleasingly with
     * Gentium Book Plus (serif) for prose. And Fira Code composes nicely with
     * those two.
     *
     * Also we rely on the so-called "system font stack" as a fallback to our
     * preferred fonts. c.f. https://systemfontstack.com/
     */
    --headings-font-family: 'PT Sans Narrow', -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
    --body-prose-family: 'Gentium Book Plus', Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, serif;
    --body-code-family: 'Fira Code', Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
    line-height: var(--scale-xl);
    font-size: var(--scale-l);

    /* --------------------------------------------------
     * EMBELLISHMENTS: borders, colours etc.
     * --------------------------------------------------*/
    --color-light: #f0ece2;
    --color-mid: #dfd3c3;
    --color-dark: #1a2639;
    --color-emphasis: black;
    --color-masthead:  #ef9f2c;
    --color-background: var(--color-light);
    --color-links: var(--color-emphasis);
    --color-body-text: var(--color-dark);
    --color-code: var(--color-emphasis);
    --color-quotes: var(--color-emphasis);

    color: var(--color-body-text);
    background-color: var(--color-background);
}

* {
  max-width: var(--col-w-full-bleed);
}

html,
body,
div,
header,
main,
input,
button {
  font-family: var(--body-prose-family);
  font-size: var(--scale-base);
  font-weight: normal;
  font-style: normal;
  max-width: none;
}

body {
  margin: var(--scale-xxs);
  overflow-x: hidden;
}

main {
  margin: var(--scale-s);
}

pre {
  padding: var(--scale-s);
  border-radius: var(--scale-xxxxs);
  background-color: var(--color-light);
  overflow-x: auto;
}

code {
  color: var(--color-code) !important;
  font-size: var(--scale-s);
  line-height: var(--scale-l);
  font-family: var(--body-code-family);
  font-weight: bold;
}

figure {
  margin: 0;
  padding: var(--scale-s);
  border-radius: var(--scale-xxxxs);
  background-color: var(--color-light);
  color: var(--color-emphasis) !important;
}

figure > img {
  border: thin solid;
  border-color: var(--color-mid);
}

figure > figcaption {
  padding: var(--scale-xxs);
  font-family: var(--headings-font-family);
  font-size: var(--scale-s);
  line-height: var(--scale-l);
  font-weight: bold;
  background-color: var(--color-mid);
  border: thin solid;
  border-color: var(--color-body-text);
}

.figcaption {
  margin: 0;
  font-family: var(--headings-font-family);
  font-size: var(--scale-s);
  font-weight: bold;
}

blockquote {
  color: var(--color-quotes) !important;
  margin: var(--scale-base);
  font-style: italic;
}

a {
  color: var(--color-links);
  text-underline-offset: var(--scale-xxxs);
}

a:hover {
  color: var(--color-masthead);
  background: var(--color-dark);
}
/* ... */

